--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ textarea {
 .exporter textarea {
     width: 33%;
     display: inline-block;
-    height: 80vh;
+    height: 30vh;
 }
 .form textarea {
     width: 400px;
@@ -29,4 +29,13 @@ textarea {
 
 .slide > div * {
     vertical-align: middle;
+}
+
+.iframe-container {
+    width: 33%;
+    margin: 0 auto;
+}
+iframe {
+    width: 100%;
+    height: 60vh;
 }
